connector/src/connector/snapshots/hopr_chain_connector__connector__accounts__tests__connector_should_not_register_safe_that_does_not_exist.snap
---
source: connector/src/connector/accounts.rs
expression: "*connector.client.snapshot()"
---
accounts: {}
native_balances:
  668430def9eacd2b5064acf85d73fb0b351a1c8c:
    __typename: NativeBalance
    balance: 10 xDai
token_balances: {}
safe_allowances: {}
deployed_safes: {}
safe_redeem_stats: {}
tx_counts: {}
channels: {}
services: {}
service_types:
  "gvpn:exit":
    service_type: "gvpn:exit"
    owner: f39fd6e51aad88f6f4ce6ab8827279cfffb92266
    requirement: ~
    registration_burn: 1000 wxHOPR
    update_burn: 100 wxHOPR
service_registry_config:
  type_registration_fee: 1 wxHOPR
  node_safe_registry: 0165878a594ca255338adfa4d48449f69242eb8f
chain_info:
  channel_closure_grace_period: "300"
  channel_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  block_number: 1
  chain_id: 100
  gas_price: "1000000000"
  ledger_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  max_fee_per_gas: "3000000000"
  max_priority_fee_per_gas: "100000000"
  min_ticket_winning_probability: 1
  key_binding_fee: 0.01 wxHOPR
  safe_registry_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  ticket_price: 1 wxHOPR
  network: piz-palu-staging
  contract_addresses: "{\"announcements\":\"0x41Af691c89AC93D86d0f252408379813C783F70C\",\"channels\":\"0x3480Caf9Bc8874F4c7E3Fc4A62EaB681b643B137\",\"module_implementation\":\"0x03F83c5585E78baDCB3BDC5d03347D012042cC75\",\"node_safe_migration\":\"0xE82FB6483C2196ed645210249Fddb4D9760Cb2A6\",\"node_safe_registry\":\"0x1d016fc4cFb19669B69716aAcc5325CD880bb13c\",\"node_stake_factory\":\"0x2A95f3803323AB6f5D85A76D2F0f79D8fF20B30e\",\"service_registry\":\"0x8b2FCd3e64925cA63E5C1BB340C3Ff89C6B09C0E\",\"ticket_price_oracle\":\"0x4a2108aE32A3348f46489f50a0053F256C599B01\",\"token\":\"0xD4fdec44DB9D44B8f2b6d529620f9C0C7066A2c1\",\"winning_probability_oracle\":\"0x359378D7c63E4f99c6574D87F992911b4df7BCDe\",\"xhopr_token\":\"0xD057604A14982FE8D88c5fC25Aac3267eA142a08\"}"
  expected_block_time: "5"
  finality: "3"
version: "1"
health: OK
active_txs: {}
